
syntax = "proto3";

option go_package = "github.com/alexmt/grpc-vs-rest/grpc";

package gprc;

service MyService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc StreamHello (StreamHelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message StreamHelloRequest {
  string name = 1;
  int32 count = 2;
}


message HelloReply {
  string message = 1;
}